--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,11 @@
 nav {
-    background-color: black;
+    background-color: #161616;
     color: white;
     display: flex;
     justify-content: space-between;
     padding: 30px 60px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
 }
 
 nav ul {
@@ -32,9 +34,13 @@ nav li a:hover {
 {
   display: flex;
   padding: 1rem;
-  border-top: 1px solid #dcdcdc;
+  border-top: 1px solid #161616;
   justify-content: space-between;
   margin-top: auto;
+  background: #161616;
+  color: white;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
 
   .footer-links {
     display: flex;
@@ -56,6 +62,9 @@ body{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background: linear-gradient(to bottom right, #4e54c8, #8f94fb);
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
 }
 
 
@@ -99,3 +108,6 @@ body{
     }
   }
   
+.white-text {
+  color: white;
+}
